--- a/src/css/report.styl
+++ b/src/css/report.styl
@@ -524,9 +524,6 @@ body
     
 .analysis-results__select-form-item-container > .tree-cover-canopy-display
   margin 0 auto
-  
-.react-datepicker__navigation
-  display none
 
 @media (max-width 550px)
   .report-header__title
